# vru-kyber

./: .gitattributes  Cargo.toml  README.md  check_test_vectors.sh
benches/: main.rs
src/: array.rs  block.rs  coefficient.rs  config.rs  generator.rs  indcpa.rs  kem.rs  lib.rs  poly.rs  tests.rs
