[package]
name = "vru-kyber"
version = "0.2.0"
authors = ["Vladislav Melnik <vladislav.melnik@protonmail.com>"]
edition = "2021"
rust-version = "1.58.1"
license = "MIT"
description = "Rust implementation of kyber algorithm"
repository = "https://github.com/vlad9486/vru-kyber.git"
keywords = ["kyber", "kem", "key-exchange", "post-quantum"]
categories = ["cryptography"]

[[bench]]
name = "main"
harness = false

[dev-dependencies]
hex = { version = "0.4.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
criterion = { version = "0.3.5" }

[dependencies]
sha3 = { version = "0.10.1" }
subtle = { version = "2.4" }
zeroize = { version = "1.5", features = ["zeroize_derive"] }
rand = { version = "0.8.5" }
